<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/noir"
    android:orientation="vertical" >

    <TextView android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/blanc"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/nom" />

    <Button android:id="@+id/jouer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:layout_marginBottom="12dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/bleu"
        android:textColor="@color/blanc"
        android:text="@string/jouer" />

    <Button android:id="@+id/comment_jouer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:layout_marginBottom="12dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/bleu"
        android:textColor="@color/blanc"
        android:text="@string/comment_jouer" />

    <Button android:id="@+id/parametre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:layout_marginBottom="12dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/bleu"
        android:textColor="@color/blanc"
        android:text="@string/param" />

    <Button android:id="@+id/mon_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:layout_marginBottom="12dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/bleu"
        android:textColor="@color/blanc"
        android:text="@string/profile" />

    <Button android:id="@+id/hof"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:layout_marginBottom="12dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/bleu"
        android:textColor="@color/blanc"
        android:text="@string/hof" />

    <Button android:id="@+id/surprise"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:layout_marginBottom="12dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/bleu"
        android:textColor="@color/blanc"
        android:text="@string/surprise" />
</LinearLayout>